# simple-cpp-cmake-template

./: .clang-format  CMakeLists.txt  readme.md
src/: App.ixx  CMakeLists.txt  Main.cpp
src/app/: App.ixx
